sms ready
