# docs/swagger.json
@@ -15,7 +15,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:31168",
     "basePath": "/api",
     "paths": {
         "/health": {
@@ -38,9 +38,9 @@
                 }
             }
         },
-        "/sms/send": {
+        "/sms/notify": {
             "post": {
-                "description": "通过腾讯云发送短信",
+                "description": "按照课程查询用户并发送短信通知",
                 "consumes": [
                     "application/json"
                 ],
@@ -50,15 +50,15 @@
                 "tags": [
                     "短信"
                 ],
-                "summary": "发送短信",
+                "summary": "通知课程",
                 "parameters": [
                     {
-                        "description": "短信请求",
+                        "description": "通知请求",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.SendSmsRequest"
+                            "$ref": "#/definitions/handler.NotifyRequest"
                         }
                     }
                 ],
@@ -86,6 +86,19 @@
         }
     },
     "definitions": {
+        "handler.NotifyRequest": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "description": "课程ID，必填",
+                    "type": "integer",
+                    "example": 123
+                }
+            }
+        },
         "handler.Response": {
             "type": "object",
             "properties": {
@@ -98,31 +111,6 @@
                     "description": "响应消息",
                     "type": "string",
                     "example": "success"
-                }
-            }
-        },
-        "handler.SendSmsRequest": {
-            "type": "object",
-            "required": [
-                "params",
-                "phone"
-            ],
-            "properties": {
-                "params": {
-                    "description": "短信参数",
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "example": [
-                        "验证码",
-                        "5"
-                    ]
-                },
-                "phone": {
-                    "description": "手机号",
-                    "type": "string",
-                    "example": "13800138000"
                 }
             }
         }
